Quorum3/Library/Tests/TypeCheckerGenerated/Fail/RetAssignNumberBoolObjField.quorum
class Main
    number v = Test()
    action Main
    end

    action Test() returns number
        Boolean var
        var:SetValue(true)
        return var
    end
end